[package]
name = "mcast"
version = "0.1.4"
authors = ["Andrew Kilroy <7545475+andykilroy@users.noreply.github.com>"]
edition = "2018"

[features]
bsdreuseport = []

[dependencies]
clap = "2.33"
base64 = "0.10"
failure = "0.1"
exitfailure = "0.5"
structopt = "0.2"

[target.'cfg(feature = "bsdreuseport")'.dependencies]
socket2 = { version = "0.3.9", features = ["reuseport"] }

[target.'cfg(not(feature = "bsdreuseport"))'.dependencies]
socket2 = "0.3.9"

[dev-dependencies]
assert_cmd = "0.11"
predicates = "1"

