[package]
name = "mcast"
version = "0.1.4"
authors = ["Andrew Kilroy <7545475+andykilroy@users.noreply.github.com>"]
edition = "2018"

[dependencies]
clap = "2.33"
socket2 = { version = "0.3.11", features = ["reuseport"] }
base64 = "0.10"
failure = "0.1"
exitfailure = "0.5"
structopt = "0.2"

[dev-dependencies]
assert_cmd = "0.11"
predicates = "1"

